[fix/design/largeScreen]filter on home

--- a/public/sass/import/_desktop.scss
+++ b/public/sass/import/_desktop.scss
@@ -49,6 +49,15 @@ h1{
         padding-left: 3%;
     }
 }
+#filterHome{
+    margin-left: 25%;
+}
+
+/*-----story-----*/
+
+#storyHolder{
+    margin-top: 2%;
+}
 
 
 /* end of @media (max-width: 64.063em) /* = min-width 1025px */
