[design] begin to work on browse page => picture + call to action

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -14,8 +14,8 @@
                 ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris venenatis enim vel eros aliquet, et egestas nulla tempus.
                 Sed eleifend mollis tortor, et scelerisque metus sagittis id. Donec dignissim ipsum ac velit ornare, tincidunt placerat neque tempor.
             </p>
-            <h3>And you what will your story be?</h3>
-            <a class="btn homeLinks" href="{{ path('addStory') }}">Add a story</a>
+            <h3>And you, what will your story be?</h3>
+            <a class="btn pictLink" href="{{ path('addStory') }}">Add a story</a>
         </div>
     </div>
 
