--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -383,6 +383,17 @@ h1,
 	background-color: $secondary-color-dark;
 }
 
+.pictLink{
+	padding: 5px 170px;
+	font-size: 2rem;
+	margin-top: 3%;
+}
+.pictLink:hover{
+	background-color: transparent;
+	color: $secondary-color;
+	border-color: $secondary-color;
+}
+
 /*--------FORM---------*/
 #addForm,
 .connectionForm
@@ -635,6 +646,31 @@ h1,
 	}
 
 }
+/*------browse-------*/
+#introBrowse {
+	h1 b{
+		color: $secondary-color;
+	}
+	.storyCount{
+		margin-top: 20%;
+	}
+	background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('../../images/HomeImg.jpg'),no-repeat;
+	background-position: center;
+	min-height: 900px;
+}
+
+#punchLine{
+	padding: 3%;
+	margin-bottom: 5%;
+	margin-top: 5%;
+	color: #FFFFFF;
+	width: 50%;
+	margin-left: 25%;
+	text-align: center;
+}
+
+
+
 	/* -----MOBILE-----*/
 
 	/* @media query optionnelle (max-width: 640px)*/
