--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -216,6 +216,8 @@ i.fa{
 	-moz-box-shadow: $shadow !important;
 	box-shadow: $shadow !important;
 	min-height: 300px;
+	min-width: 290px;
+	max-width: 33.33%;
 	border: solid 1px $secondary-color;
 	border-radius: 5px;
 	ul {
@@ -268,18 +270,16 @@ i.fa{
 
 /*------- home ---------*/
 #intro {
-	position: relative;
-	text-align: center;
-	color: white;
+	background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('../../images/HomeImg.jpg'),no-repeat;
+	background-position: center;
+	background-size: cover;
+	min-height: 960px;
 }
 
-#homeImg{
-	filter: brightness(50%);
-}
 
 .storyCount {
 	b {
-	 color: $secondary-color;
+		color: $secondary-color;
 	}
 	text-align: center;
 	margin-bottom: 5%;
@@ -293,8 +293,17 @@ h1,
 	font-size: 5rem;
 }
 #speech{
+	padding: 3%;
+	margin-bottom: 5%;
+	margin-top: 5%;
+	color: #FFFFFF;
+	text-align: center;
 	p{
 		font-size: 1.8rem;
+		text-align: justify;
+	}
+	h2{
+		margin-top: 5%;
 	}
 }
 
@@ -668,8 +677,6 @@ h1,
 	margin-left: 25%;
 	text-align: center;
 }
-
-
 
 	/* -----MOBILE-----*/
 
