[minor/design] logout button border

--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -173,7 +173,9 @@ i.fa{
 
 #logout:hover{
 	background-color: #FFFFFF;
+	border: none;
 }
+
 #signInLink:hover{
 	color: #FFFFFF !important;
 	background: $secondary-color !important;
