--- a/templates/addStory.html.twig
+++ b/templates/addStory.html.twig
@@ -125,7 +125,8 @@
             </div>
             <div class="form-group row  part3" style="display: none">
                 {{ form_row(form.urls) }}
-                <a href="#" id="add_url" class="btn btn-default">add a link</a>
+                <a href="#" id="add_url" class="btn btn-default"><i class="fa fa-plus" aria-hidden="true"></i>
+                </a>
             </div>
         </div>
         <div class="form-group row part4">
