[add/html] * => on required input label

--- a/templates/addStory.html.twig
+++ b/templates/addStory.html.twig
@@ -10,12 +10,12 @@
         <div id="storyPart1">
             <p id="showPart1"> <i class="fa fa-caret-down" aria-hidden="true"></i> Story topic and patronage</p>
                 <div class="form-group row part1" style="display: block">
-                    {{ form_label(form.topic) }}
+                    {{ form_label(form.topic) }}<span class="req">*</span>
                     {{ form_widget(form.topic ,{'attr':{'class':'form-control'}}) }}
                     <span class="invalidBack">{{ form_errors(form.topic) }}</span>
                 </div>
                 <div class="form-group row part1" style="display: block">
-                    {{ form_label(form.worldArea) }}
+                    {{ form_label(form.worldArea) }}<span class="req">*</span>
                     {{ form_widget(form.worldArea ,{'attr':{'class':'form-control'}}) }}
                 </div>
                 <div class="form-group row part1" style="display: block">
@@ -24,7 +24,7 @@
                     <span class="invalidBack">{{ form_errors(form.country) }}</span>
                 </div>
                 <div class="form-group row part1" style="display: block">
-                    {{ form_label(form.patronage) }}
+                    {{ form_label(form.patronage) }}<span class="req">*</span>
                     {{ form_widget(form.patronage,{'attr':{'class':'form-control'}}) }}
                     <span class="invalidBack">{{ form_errors(form.patronage) }}</span>
                 </div>
@@ -41,7 +41,7 @@
                     <span class="invalid" id="invalid_investor" style="display: none">Between 2 up to 100 characters</span>
                 </div>
                 <div class="form-group row  part1" style="display: block">
-                    {{ form_label(form.year) }}
+                    {{ form_label(form.year) }}<span class="req">*</span>
                     {{ form_widget(form.year ,{'attr':{'class':'form-control'}}) }}
                 <span class="invalidBack">{{ form_errors(form.year) }}</span>
             </div>
@@ -49,7 +49,7 @@
         <div id="storyPart2">
             <span id="showPart2"> <i class="fa fa-caret-down" aria-hidden="true"></i> Story's abstract and narrative</span>
                 <div class="form-group row part2" style="display: none">
-                    {{ form_label(form.title) }}
+                    {{ form_label(form.title) }}<span class="req">*</span>
                     {{ form_widget(form.title ,{'attr':{'class':'form-control'}}) }}
                     <span class="invalidBack">{{ form_errors(form.title) }}</span>
                     <span class="invalid_sign" id="invalid_title_icon" style="display: none">
@@ -61,7 +61,7 @@
                     <span class="invalid" id="invalid_title" style="display: none">Between 5 up to 100 characters</span>
                 </div>
                 <div class="form-group row part2" id="abstract" style="display: none">
-                    {{ form_label(form.abstract) }}
+                    {{ form_label(form.abstract) }}<span class="req">*</span>
                     {{ form_widget(form.abstract ,{'attr':{'class':'form-control tinyMce'}}) }}
                     <span class="invalidBack">{{ form_errors(form.abstract) }}</span>
                     <span class="invalid_sign" id="invalid_abstract_icon" style="display: none">
@@ -73,7 +73,7 @@
                     <span class="invalid" id="invalid_abstract" style="display: none">70 words maximum</span>
                 </div>
                 <div class="form-group row part2" id="plot" style="display: none">
-                    {{ form_label(form.plot) }}
+                    {{ form_label(form.plot) }}<span class="req">*</span>
                     {{ form_widget(form.plot ,{'attr':{'class':'form-control tinyMce'}}) }}
                     <span class="invalidBack">{{ form_errors(form.plot) }}</span>
                     <span class="invalid_sign" id="invalid_plot_icon" style="display: none">
@@ -88,7 +88,7 @@
         <div id="storyPart3">
             <span id="showPart3"> <i class="fa fa-caret-down" aria-hidden="true"></i> Story's intel</span>
             <div class="form-group row part3" style="display: none">
-                {{ form_label(form.contactEmail) }}
+                {{ form_label(form.contactEmail) }}<span class="req">*</span>
                 {{ form_widget(form.contactEmail ,{'attr':{'class':'form-control'}}) }}
                 <span class="invalidBack">{{ form_errors(form.contactEmail) }}</span>
                 <span class="invalid_sign" id="invalid_email_icon" style="display: none">
