--- a/templates/connectionForms.html.twig
+++ b/templates/connectionForms.html.twig
@@ -25,7 +25,7 @@
                 </div>
                 <div class="form-group row">
                     <button class="btn btn-success" id="loginBtn" type="submit">Submit</button>
-                    <a class="btn btn-default" href="{{ path('lostPassword') }}">Lost Password</a>
+                    <a class="btn btn-default lost" href="{{ path('lostPassword') }}">Lost Password</a>
                 </div>
             </form>
         </div>
