[add/style]  status icons colors

--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -80,6 +80,14 @@ i.fa{
 	color: $secondary-color-dark;
 }
 
+i.fa-times{
+	color: #F54041;
+}
+
+i.fa-check{
+	color: #5fdda1;
+}
+
 /* -----BUTTONS-----*/
 
 .btn {
