--- a/templates/admin/adminUser.html.twig
+++ b/templates/admin/adminUser.html.twig
@@ -2,24 +2,26 @@
 
 {% block body %}
 
-    <div class="container-fluid">
+    <div class="container-fluid adminList">
         <table class="table">
             <thead>
-                <tr>
+            <tr>
+                <th>
                     ID
-                </tr>
-                <tr>
+                </th>
+                <th>
                     <i class="fa fa-user" aria-hidden="true"></i>
-                </tr>
-                <tr>
+                </th>
+                <th>
                     <i class="fa fa-envelope" aria-hidden="true"></i>
-                </tr>
-                <tr>
+                </th>
+                <th>
                     <i class="fa fa-calendar" aria-hidden="true"></i>
-                </tr>
-                <tr>
+                </th>
+                <th>
                     Activated
-                </tr>
+                </th>
+            </tr>
             </thead>
             <tbody>
                 <tr>
@@ -29,6 +31,9 @@
                     </td>
                     <td>
                         {{ user.fullname }}
+                    </td>
+                    <td>
+                        {{ user.email }}
                     </td>
                     <td>
                         {{ user.registeredOn|date("m/d/Y") }}
