--- a/templates/admin/adminUserData.html.twig
+++ b/templates/admin/adminUserData.html.twig
@@ -30,6 +30,9 @@
         <li>
             Engagement : {{ user.engagement }}
         </li>
+        <li>
+            Stories : {{ user.stories|length }}
+        </li>
     </ul>
 
     <a href="#" class="btn btn-danger">Delete</a>
