--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -773,6 +773,24 @@ h1,
 	margin-top: 3%;
 }
 
+#adminNav{
+	margin-top: 1.5%;
+	min-width: 100%;
+	border-bottom: solid 1px $secondary-color;
+	padding: 1%;
+	ul{
+		display: flex;
+		justify-content: space-between;
+	}
+	li a{
+		color: $secondary-color !important;
+	}
+	li a:hover{
+		text-decoration: none;
+	}
+}
+
+
 
 	/* -----MOBILE-----*/
 
