[mod/template] integrate adminNav + all admin templates inherit of base.html.twig

--- a/templates/admin/adminPatronage.html.twig
+++ b/templates/admin/adminPatronage.html.twig
@@ -1,6 +1,9 @@
-{% extends "admin/admin.html.twig" %}
+{% extends "base.html.twig" %}
 
 {% block body %}
+
+    {{ include('admin/adminNav.html.twig') }}
+
     <div class="container-fluid adminList">
         <table class="table">
             <thead>
