--- a/templates/admin/adminEditStory.html.twig
+++ b/templates/admin/adminEditStory.html.twig
@@ -1,6 +1,7 @@
-{% extends "admin/admin.html.twig" %}
-
+{% extends "base.html.twig" %}
 {% block body %}
+
+    {{ include('admin/adminNav.html.twig') }}
 
     <div class="well">
     {{ form_start(form ,{'attr':{'id':'addForm'}}) }}
