--- a/templates/admin/adminUser.html.twig
+++ b/templates/admin/adminUser.html.twig
@@ -1,7 +1,6 @@
-{% extends "admin/admin.html.twig" %}
-
+{% extends "base.html.twig" %}
 {% block body %}
-
+    {{ include('admin/adminNav.html.twig') }}
     <div class="container-fluid adminList">
         <table class="table">
             <thead>
