--- a/templates/admin/adminPatronage.html.twig
+++ b/templates/admin/adminPatronage.html.twig
@@ -37,17 +37,28 @@
         </table>
     </div>
 
-    <div id="patronageForm">
+    <div class="trigger">
+        <button class="btn btn-primary">Add a patronage</button>
+    </div>
+
+    <div class="modalForm" id="patronageForm" style="display: none">
+        <i class="fa fa-times closeModal"></i>
         {{ form_start(form ,{'attr':{'id':'newPatronageForm'}}) }}
         <div class="form-group row">
             {{ form_label(form.organization) }}
             {{ form_widget(form.organization ,{'attr':{'class':'form-control'}}) }}
             {{ form_errors(form.organization) }}
         </div>
-        <div class="form-group">
+        <div class="form-group row">
             <button class="btn btn-success" id="newPatronageBtn" type="submit">Submit</button>
         </div>
         {{ form_end(form) }}
     </div>
+    <div class="modalOverlay" style="display: none"></div>
 
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('js/modal.js') }}"></script>
 {% endblock %}
