--- a/templates/admin/adminTopic.html.twig
+++ b/templates/admin/adminTopic.html.twig
@@ -37,16 +37,27 @@
         </table>
     </div>
 
-    <div id="topicForm">
+    <div class="trigger">
+        <button class="btn btn-primary">Add a topic</button>
+    </div>
+
+    <div class="modalForm" id="topicForm" style="display: none">
+        <i class="fa fa-times closeModal"></i>
         {{ form_start(form ,{'attr':{'id':'newTopicForm'}}) }}
         <div class="form-group row">
             {{ form_label(form.type) }}
             {{ form_widget(form.type ,{'attr':{'class':'form-control'}}) }}
             {{ form_errors(form.type) }}
         </div>
-        <div class="form-group">
+        <div class="form-group row">
             <button class="btn btn-success" id="newTopicBtn" type="submit">Submit</button>
         </div>
         {{ form_end(form) }}
     </div>
+    <div class="modalOverlay" style="display: none"></div>
 {% endblock%}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('js/modal.js') }}"></script>
+{% endblock %}
