--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -790,6 +790,68 @@ h1,
 	}
 }
 
+.modalForm{
+	width: 50%;
+	position: absolute;
+	top: 200px;
+	min-width: 30%;
+	opacity: 1;
+	left: 25%;
+	right: 25%;
+	background-color: #FFFFFF;
+	height:300px;
+	border-radius:10px;
+	border: 1px solid rgba(49, 51, 54, 0.3);
+	-webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+	-moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+	box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+	-webkit-background-clip: padding-box;
+	-moz-background-clip: padding-box;
+	background-clip: padding-box;
+	z-index: 2000;
+}
+
+#newTopicForm,
+#newPatronageForm{
+	width: 80%;
+	margin-left: 10%;
+	margin-right: 10%;
+	padding: 10%;
+	label{
+		color: $secondary-color;
+	}
+	.btn{
+		border-color: $secondary-color;
+		background-color: transparent !important;
+		color: $secondary-color;
+	}
+	.btn:hover{
+		border: none;
+		background-color: $secondary-color !important;
+		color: #FFFFFF;
+	}
+}
+
+.modalOverlay{
+	z-index: 1000;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(49, 51, 54, 0.8);
+}
+
+.closeModal{
+	position: absolute;
+	right: 10px;
+	top: 10px;
+	color: #999;
+	line-height: 10px;
+}
+
+
+
 
 
 	/* -----MOBILE-----*/
