--- a/templates/admin/adminStoryData.html.twig
+++ b/templates/admin/adminStoryData.html.twig
@@ -74,7 +74,9 @@
 
     <a href="#" class="btn btn-danger">Delete</a>
     {% if story.validated == false %}
-        <a href="#" class="btn btn-default">Validate and publish</a>
+        <a href="{{ path('adminActions',{'entity' : 'story' , 'id' : story.id , 'action' : 'validate'}) }}"
+           class="btn btn-default">Validate and publish
+        </a>
     {% endif %}
     <a href="{{ path('adminEditStory',{'id' : story.id}) }}" class="btn btn-primary">Edit</a>
 
