--- a/templates/admin/adminStory.html.twig
+++ b/templates/admin/adminStory.html.twig
@@ -4,6 +4,9 @@
 
     {{ include('admin/adminNav.html.twig') }}
 
+
+    <h1>{{ title|upper }}</h1>
+
     <div class="container-fluid adminList">
         <table class="table">
             <thead>
