[mod/html/sass] center addStory form btn

--- a/templates/addStory.html.twig
+++ b/templates/addStory.html.twig
@@ -129,7 +129,7 @@
                 </a>
             </div>
         </div>
-        <div class="form-group row part4">
+        <div class="form-group row part4 col-md-12 text-center">
             <button class="btn btn-success" id="addStoryBtn" type="submit">Submit</button>
             <input id="userMail" type="hidden" value="{{ app.user.email }}">
         </div>
