--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -343,6 +343,8 @@ h1,
 	p{
 		font-size: 1.8rem;
 		text-align: justify;
+		max-width: 700px;
+		display: inline-block;
 	}
 	h2{
 		margin-top: 5%;
