--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="container-fluid" id="intro">
-        <div class="col-sm-12 imgText" id="speech">
+        <div class="col-md-12 imgText" id="speech">
             <h1 class="storyCount">OUR CLIMATE STORIES SAFE <b>{{ total[0]|join('|') }} {{ total[0]|join('|') > 1 ? 'STORIES' : 'STORY' }}</b></h1>
             <h2>Our mission</h2>
             <p>
