--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -40,19 +40,19 @@
 
     <div class="container-fluid" id="filterHome">
         {{ form_start(filter,{'attr':{'class':'form-inline'}, 'action': path('search') }) }}
-        <div class="form-group ">
+        <div class="form-group col-md-3">
             {{ form_widget(filter.topic ,{'attr':{'class':'form-control'}}) }}
         </div>
-        <div class="form-group">
+        <div class="form-group col-md-3">
             {{ form_widget(filter.patronage,{'attr':{'class':'form-control'}}) }}
         </div>
-        <div class="form-group">
+        <div class="form-group col-md-3">
             {{ form_widget(filter.worldArea,{'attr':{'class':'form-control'}}) }}
         </div>
-        <div class="form-group">
+        <div class="form-group col-md-3">
             {{ form_widget(filter.country ,{'attr':{'class':'form-control'}}) }}
         </div>
-        <div class="form-group" id="filterHomeBtn">
+        <div class="row" id="filterHomeBtn">
             <button class="btn btn-success" type="submit">
                 <i class="fa fa-search " aria-hidden="true"></i>
                 search
